# z4

./: .gitignore  Cargo.toml  README.md
command/: Cargo.toml
command/src/: contract.rs  main.rs
contracts/solidity/: .env-template  .gitignore  .pnp.cjs  hardhat.config.js  package.json
contracts/solidity/contracts/: Demo.sol  RoomMarket.sol  SimpleGame.sol  Token.sol  VmRisc0.sol
contracts/solidity/scripts/: abi.js  address_utils.js  deploy.js  update_config.js
derive/: Cargo.toml
derive/src/: lib.rs
engine/: Cargo.toml  README.md
engine/examples/: shoot.rs  shoot_common.rs  shoot_no_chain.rs  shoot_with_chain.rs  shoot_zk.rs
engine/p2p/: assist  key
engine/src/: config.rs  contracts.rs  engine.rs  key.rs  lib.rs  p2p.rs  pool.rs  request.rs  room.rs  rpc.rs  scan.rs  task.rs  types.rs
engine/tdn/p2p/: assist
node/: .env-template  Cargo.toml  README.md
node/src/: game.rs  handler.rs  main.rs  risc0.rs
pozk/: Cargo.toml
pozk/examples/: shoot_common.rs  shoot_no_chain.rs  shoot_with_chain.rs
pozk/src/: lib.rs
prover/poker/core/: Cargo.toml
prover/poker/core/src/: cards.rs  combination.rs  ecdsa.rs  errors.rs  lib.rs  play.rs  schnorr.rs  task.rs
prover/poker/host/: Cargo.toml
prover/poker/host/src/: main.rs
prover/poker/methods/: Cargo.toml
prover/poker/methods/guest/: Cargo.toml
prover/poker/methods/guest/src/: main.rs
public/: localhost.json  opbnbtestnet.json  sepolia.json
public/ABI/: Demo.json  RoomMarket.json  SimpleGame.json  Token.json
types/: Cargo.toml  README.md
types/src/: contracts.rs  error.rs  key.rs  lib.rs  network.rs  task.rs  utils.rs
