[workspace]
members = [
  "command",
  "engine",
  "node",
  "types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Zypher <dev@zypher.network>"]
readme = "README.md"
homepage = "https://zypher.network"
repository = "https://github.com/zypher-game/z4"
categories = ["game", "framework"]
keywords = ["zkp", "game", "framework"]
license = "GPL-3.0-only"
include = ["public", "src", "Cargo.toml", "README.md"]

[workspace.dependencies]
z4-types = { version = "0.1", path = "./types" }
z4-engine = { version = "0.1", path = "./engine" }

anyhow = "1.0"
async-trait = "0.1"
ark-ec = { version = "0.4", default-features = false, package = "ark-ec-zypher" }
ark-ff = { version = "0.4", default-features = false, features = ["asm"], package = "ark-ff-zypher" }
ark-poly = { version = "0.4", default-features = false, package = "ark-poly-zypher" }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"], package = "ark-serialize-zypher" }
ark-std = { version = "0.4", default-features = false, package = "ark-std-zypher" }
ark-bn254 = { version = "0.4", default-features = false, features = ["curve"], package = "ark-bn254-zypher" }
ark-ed-on-bn254 = { version = "0.4", default-features = false, package = "ark-ed-on-bn254-zypher" }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
ethers = "2.0"
ethereum-types = "0.14"
hex = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
rand_chacha = "0.3"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tdn = { version = "0.10", default-features = false, features = ["multiple"] }
tokio = "1.35"
tokio-tungstenite = "0.21"
tracing = "0.1"
uzkge = { version = "0.1", default-features = false }