[package]
name = "z4"
description = "a command tool for Z4 game framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
ethers.workspace = true
serde.workspace = true
