[package]
name = "zroom-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
ethers = "2.0"
ethereum-types = "0.14"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tdn = { version = "0.10", default-features = false, features = ["multiple"] }
tokio = "1.35"
tracing = "0.1"
tokio-tungstenite = { version = "0.21", optional = true }
futures-util = { version = "0.3", default-features = false, features = ["sink"], optional = true }

[dev-dependencies]
rand_chacha = "0.3"

[features]
default = ["request"]
request = [
  "tokio-tungstenite",
  "futures-util"
]
