[package]
name = "z4-engine"
description = "a multiplayer real-time decentralized game framework"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
z4-types.workspace = true

anyhow.workspace = true
ark-ec.workspace = true
ark-ed-on-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
async-trait.workspace = true
bincode.workspace = true
dotenv.workspace = true
ethers.workspace = true
ethereum-types.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tdn.workspace = true
tokio.workspace = true
tracing.workspace = true
uzkge.workspace = true
futures-util = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }

[dev-dependencies]
rand_chacha.workspace = true
tracing-subscriber.workspace = true
ark-bn254.workspace = true

[features]
default = ["request"]
request = [
  "tokio-tungstenite",
  "futures-util"
]
risc0 = []
