[package]
name = "z4-node"
version = "0.1.0"
edition = "2021"

[features]
default = ["risc0"]
risc0 = ["z4-engine/risc0"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bincode = "1.3"
ethers = "2.0"
ethereum-types = "0.14"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.35"
tracing = "0.1"
z4-engine = { version = "0.1", path = "../engine" }
z4-types = { version = "0.1", path = "../types" }
