[package]
name = "z4-node"
description = "Universal Z4 node with zkVM"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true

[features]
default = ["risc0"]
risc0 = ["z4-engine/risc0"]

[dependencies]
z4-engine.workspace = true
z4-types.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
ethers.workspace = true
ethereum-types.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
