[package]
name = "z4-pozk"
description = "a multiplayer real-time decentralized game framework with PoZK"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
z4-types.workspace = true
pozk-utils.workspace = true

anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
ethereum-types.workspace = true
futures-util.workspace = true
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tokio-tungstenite.workspace = true

[dev-dependencies]
rand_chacha.workspace = true
tracing-subscriber.workspace = true
ark-bn254.workspace = true

[features]
default = []
risc0 = []
