[package]
name = "z4-types"
description = "Z4 game framework types"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bincode.workspace = true
ethabi.workspace = true
ethereum-types.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tdn_types.workspace = true
tokio.workspace = true
