[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zshuffle = { git = "ssh://git@github.com/zypher-game/uzkge.git" }
lazy_static = "1.4"
k256 = { version = "0.13", features = ["serde"] }

[dev-dependencies]
rand_chacha = "0.3"