[package]
name = "poker-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zplonk = { path = "../../../../uzkge/zplonk"}
zshuffle = { path = "../../../../uzkge/shuffle"}
ark-ec = "0.4"
ark-ff = "0.4"
ark-std = "0.4"
ark-ed-on-bn254 = "0.4"
ark-bn254 = "0.4"
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
rand_chacha = "0.3"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.5.1"
risc0-zkvm = { version = "0.20", default-features = false }


[dev-dependencies]

[features]
default = []
risc0_serialize = ["zplonk/risc0_serialize"]
