[package]
name = "poker-host"
version = "0.1.0"
edition = "2021"

[dependencies]
poker-methods = { path = "../methods" }
poker-core = { path = "../core"}
serde = {version = "1.0", features = ["derive"]}
risc0-zkvm = { version = "0.19" }
rand_chacha = "0.3"
serde_json = "1.0"

zshuffle = { path = "../../../../uzkge/shuffle"}
ark-ed-on-bn254 = "0.4"
ark-std = "0.4"