[package]
name = "poker-method"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "0.20", default-features = false, features = [ "std" ] }
poker-core = { path = "../../core", features= ["risc0_serialize"]}

[patch.crates-io]
ark-ff = { git = "https://github.com/confuseSUN/algebra", branch = "test"}
ark-ec = { git = "https://github.com/confuseSUN/algebra", branch = "test" }
ark-poly = { git = "https://github.com/confuseSUN/algebra", branch = "test" }
ark-serialize = { git = "https://github.com/confuseSUN/algebra", branch = "test" }
ark-bn254 = { git = "https://github.com/confuseSUN/algebra", branch = "test"}
ark-ed-on-bn254 = { git = "https://github.com/confuseSUN/algebra", branch = "test" }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16" }